fix the screen design by overflow hiddn

--- a/style.css
+++ b/style.css
@@ -15,7 +15,10 @@
     margin: 0;
 
 }
-
+html,
+body{
+    overflow-x: hidden;
+}
 html{
     scroll-behavior: smooth;
 
@@ -54,7 +57,12 @@ li{
     transition-delay: 0.4s;
     
 }
-
+@media (max-width:772px) {
+    .container-compo h2{
+        font-size: 22px;
+        
+    }
+}
 .container-compo h2:hover{
     border: transparent 0px solid;
     color: white;
@@ -260,7 +268,7 @@ header .container{
 .dropdown ul li i{
     margin-right: 15px;
 }
-@media (max-width:767px) {
+@media (max-width:1199px) {
     .dropdown{
         flex-direction: column;
         width: 100%;
@@ -339,6 +347,7 @@ header .container{
     }
     .landing .text{
         text-align: center;
+        margin: 30px 0 auto;
     }
     .landing h1{
         font-size: 32px;
@@ -1174,6 +1183,7 @@ header .container{
         flex-direction: column;
         background-color: transparent;
         border:0 solid transparent;
+        max-width: 100%;
     }
     .events .container .input-box input:last-child{
         width: 200px;
@@ -1183,6 +1193,7 @@ header .container{
         margin-right: 0px;
         margin-bottom: 20px;
         background-color: #e9dede;
+        width: 300px;
     }
 }
 .events .container .input-box input:last-child{
